Coding the listing board

--- a/src/styles/modules/_colors.scss
+++ b/src/styles/modules/_colors.scss
@@ -1,5 +1,6 @@
 $red: #95001a;
-$blue: #01256e;
+// $blue: #01256e;
+$blue: #0248d6;
 $light-gray: #f1f1f1;
 $dark-gray: #4b4b4b;
 $warm-gray: #cac5bb;
