--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,10 @@
 @import './modules/mixins';
 @import './modules/helpers';
 
+@import './elements/button';
+@import './elements/input';
+@import './elements/textarea';
+
 @import './base';
 
 @import './components/navbar';
@@ -12,5 +16,5 @@
 @import './components/listing';
 
 @import './views/listing';
-
-@import './elements/button';
+@import './views/listings';
+@import './views/post-listing';
