--- a/src/styles/modules/_colors.scss
+++ b/src/styles/modules/_colors.scss
@@ -1,8 +1,4 @@
-$red: #95001a;
-// $blue: #01256e;
-$blue: #0248d6;
-$light-gray: #f1f1f1;
-$dark-gray: #4b4b4b;
-$warm-gray: #cac5bb;
-$yellow: #f2c100;
-$dark-red: #6d0e0e;
+$red: #d83a2d;
+$blue: #2b71d9;
+$green: #00b387;
+// $green: #1eba6b;
