--- a/src/styles/modules/_vars.scss
+++ b/src/styles/modules/_vars.scss
@@ -1,7 +1,7 @@
 // Site
-$site-width: 960px;
-$site-bkg: #f7f7f7;
+$site-width: 840px;
+$site-bkg: #eceef1;
 
 // Navbar
-$navbar-bkg: #fff;
-$navbar-color: #000;
+$navbar-bkg: $blue;
+$navbar-color: #fff;
