--- a/src/styles/elements/_button.scss
+++ b/src/styles/elements/_button.scss
@@ -14,6 +14,11 @@ button {
   color: #fff;
 }
 
+.btn-green {
+  background: $green;
+  color: #fff;
+}
+
 .btn-hover-red:hover {
   background: $red;
   color: #fff;
