--- a/src/styles/modules/_colors.scss
+++ b/src/styles/modules/_colors.scss
@@ -1,4 +1,9 @@
 $red: #d83a2d;
 $blue: #2b71d9;
+$dark-blue: #1c52a2;
 $green: #00b387;
+$dark-green: darken($green, 5%);
+$yellow: #f3b218;
+$dark-yellow: #C28E13;
+$light-yellow: #FFF4D9;
 // $green: #1eba6b;
