--- a/src/styles/components/_listing.scss
+++ b/src/styles/components/_listing.scss
@@ -25,6 +25,11 @@
       display: inline-block;
       font-weight: 500;
       padding: 5px 0;
+      max-width: 720px;
+
+      &:hover {
+        color: $dark-blue;
+      }
     }
 
     .listing-timestamp {
