--- a/src/styles/views/_listing.scss
+++ b/src/styles/views/_listing.scss
@@ -23,4 +23,11 @@
   button {
     margin: 20px 40px 40px 40px;
   }
+
+  .no-listing {
+    font-size: 18px;
+    color: #999;
+    padding: 40px;
+    text-align: center;
+  }
  }
