--- a/src/styles/views/_listings.scss
+++ b/src/styles/views/_listings.scss
@@ -1,3 +1,11 @@
 .listings-view {
   margin-top: 64px;
+
+  .listings-pagination {
+    padding: 20px;
+
+    a {
+      display: inline-block;
+    }
+  }
 }
