--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,6 +1,5 @@
 .navbar {
   background: $navbar-bkg;
-  color: $navbar-color;
   font-weight: 500;
   height: 64px;
 
@@ -13,9 +12,14 @@
   .navbar-left {
 
     a {
+      color: $med-blue;
       display: inline-block;
       line-height: 64px;
       padding: 0 20px;
+
+      &:hover {
+        color: #fff;
+      }
     }
   }
 }
