Added loading stuff

--- a/src/styles/components/_listing.scss
+++ b/src/styles/components/_listing.scss
@@ -1,4 +1,5 @@
 .listing {
+  border-bottom: 1px solid #eee;
   padding: 15px 20px;
 
   > div {
@@ -37,8 +38,4 @@
       font-size: 14px;
     }
   }
-}
-
-.listing + .listing {
-  border-top: 1px solid #eee;
 }
