--- a/src/styles/views/_listings.scss
+++ b/src/styles/views/_listings.scss
@@ -1,6 +1,14 @@
 .listings-view {
   margin-top: 64px;
 
+  .listings-loading,
+  .no-listings {
+    color: #999;
+    font-size: 20px;
+    text-align: center;
+    padding: 20px;
+  }
+
   .listings-pagination {
     padding: 20px;
 
