--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -17,7 +17,8 @@
       line-height: 64px;
       padding: 0 20px;
 
-      &:hover {
+      &:hover,
+      &:focus {
         color: #fff;
       }
     }
