--- a/src/styles/views/_listing.scss
+++ b/src/styles/views/_listing.scss
@@ -1,5 +1,5 @@
 .listing-view {
-  padding-top: 20px;
+  padding: 20px 0;
 
   > div {
     padding: 20px 40px;
@@ -21,7 +21,7 @@
   }
 
   button {
-    margin: 20px 40px 40px 40px;
+    margin: 20px 40px;
   }
 
   .no-listing {
