--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -12,9 +12,14 @@ a {
   color: inherit;
   text-decoration: none;
   cursor: pointer;
+  outline: none;
 
   &:hover {
     text-decoration: none;
+  }
+
+  &:focus {
+    outline: none;
   }
 }
 
