--- a/src/styles/components/_listing.scss
+++ b/src/styles/components/_listing.scss
@@ -28,7 +28,8 @@
       padding: 5px 0;
       max-width: 720px;
 
-      &:hover {
+      &:hover,
+      &:focus {
         color: $dark-blue;
       }
     }
