--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 @import './elements/button';
 @import './elements/input';
 @import './elements/textarea';
+@import './elements/form';
 
 @import './base';
 
