--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -9,7 +9,8 @@
     }
   }
 
-  .navbar-left {
+  .navbar-left,
+  .navbar-right {
 
     a {
       color: $med-blue;
@@ -22,5 +23,9 @@
         color: #fff;
       }
     }
+  }
+
+  .navbar-right {
+    float: right;
   }
 }
