--- a/src/styles/components/_listing.scss
+++ b/src/styles/components/_listing.scss
@@ -34,9 +34,12 @@
       }
     }
 
+    .listing-email,
     .listing-timestamp {
+      display: inline-block;
       color: #bbb;
       font-size: 14px;
+      margin-right: 20px;
     }
   }
 }
