--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,7 @@
 @import './components/navbar';
 @import './components/listings';
 @import './components/listing';
+@import './components/auth';
 @import './components/modals/login';
 
 @import './views/listing';
@@ -24,3 +25,4 @@
 @import './views/post-listing';
 @import './views/signup';
 @import './views/login';
+@import './views/verify';
