--- a/src/styles/views/_post-listing.scss
+++ b/src/styles/views/_post-listing.scss
@@ -24,7 +24,8 @@
       width: 600px;
     }
 
-    input,
+    input[type=text],
+    input[type=password],
     textarea {
       width: 600px;
     }
