--- a/src/styles/components/_listing.scss
+++ b/src/styles/components/_listing.scss
@@ -40,6 +40,10 @@
       color: #bbb;
       font-size: 14px;
       margin-right: 20px;
+
+      a:hover {
+        color: #999;
+      }
     }
   }
 }
