--- a/src/styles/components/_auth.scss
+++ b/src/styles/components/_auth.scss
@@ -1,5 +1,6 @@
 .auth-form {
   background: #fff;
+  display: inline-block;
   height: 100vh;
   width: 50%;
   position: relative;
@@ -45,6 +46,48 @@
     .form-bottom-link {
       text-align: center;
       margin-top: 40px;
+    }
+  }
+}
+
+.auth-info {
+  display: inline-block;
+  height: 100vh;
+  vertical-align: top;
+  width: 49%;
+  position: relative;
+
+  img {
+    display: block;
+    @include opacity(0.4);
+    margin: 140px auto 0 auto;
+    width: 200px;
+  }
+
+  .call-to-action {
+    font-size: 24px;
+    line-height: 34px;
+    color: #999;
+    text-align: center;
+    margin: 40px auto;
+    width: 400px;
+  }
+
+  .attribution {
+    font-size: 13px;
+    color: #999;
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+
+    a {
+      border-bottom: 1px dotted #999;
+      padding-bottom: 2px;
+
+      &:hover {
+        border-color: #666;
+        color: #666;
+      }
     }
   }
 }
