--- a/src/styles/views/_listings.scss
+++ b/src/styles/views/_listings.scss
@@ -1,6 +1,20 @@
 .listings-view {
   margin: 64px auto;
 
+  .listings-filters {
+    font-size: 14px;
+
+    .listings-filter {
+      padding: 25px;
+
+      label {
+        color: #999;
+        cursor: pointer;
+        padding: 5px 5px 5px 10px;
+      }
+    }
+  }
+
   .listings-loading,
   .no-listings {
     color: #999;
