--- a/src/styles/components/_auth.scss
+++ b/src/styles/components/_auth.scss
@@ -64,13 +64,23 @@
     width: 200px;
   }
 
-  .call-to-action {
+  .info-block {
     font-size: 24px;
     line-height: 34px;
     color: #999;
     text-align: center;
     margin: 40px auto;
     width: 400px;
+
+    span.refresh {
+      color: #bbb;
+      font-size: 20px;
+      cursor: pointer;
+
+      &:hover {
+        color: #999;
+      }
+    }
   }
 
   .attribution {
