--- a/src/styles/modules/_colors.scss
+++ b/src/styles/modules/_colors.scss
@@ -9,4 +9,5 @@ $dark-green: darken($green, 5%);
 $yellow: #f3b218;
 $dark-yellow: #C28E13;
 $light-yellow: #FFF4D9;
+$gray: #777;
 // $green: #1eba6b;
