Added loading spinners

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
 @import './elements/textarea';
 @import './elements/form';
 @import './elements/modal';
+@import './elements/loader';
 
 @import './base';
 
