--- a/src/styles/views/_listing.scss
+++ b/src/styles/views/_listing.scss
@@ -44,6 +44,11 @@
     text-align: center;
   }
 
+  > .loader {
+    padding: 0;
+    margin: 20px auto;
+  }
+
   .listing-edit-form {
 
     .form-warning {
