--- a/src/styles/elements/_button.scss
+++ b/src/styles/elements/_button.scss
@@ -16,6 +16,17 @@ button {
     vertical-align: middle;
     display: inline-block;
   }
+
+  .loader {
+    border-left-color: #fff;
+    display: inline-block;
+    vertical-align: middle;
+    margin-top: -2px;
+    margin-right: 8px;
+    height: 10px;
+    width: 10px;
+    border-width: 2px;
+  }
 }
 
 .btn-disabled {
@@ -48,6 +59,10 @@ button {
   &:focus {
     background: $light-blue;
   }
+
+  .loader {
+    border-left-color: $blue;
+  }
 }
 
 .btn-green-text {
@@ -67,6 +82,10 @@ button {
   &:hover,
   &:focus {
     background: $light-red;
+  }
+
+  .loader {
+    border-left-color: $red;
   }
 }
 
