--- a/src/styles/components/_listing.scss
+++ b/src/styles/components/_listing.scss
@@ -27,6 +27,7 @@
       font-weight: 500;
       padding: 5px 0;
       max-width: 720px;
+      min-width: 100px;
 
       &:hover,
       &:focus {
