--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -37,3 +37,9 @@
     padding: 0 20px;
   }
 }
+
+@media (max-width: $mobile-site-width) {
+  .navbar-email {
+    display: none !important;
+  }
+}
